# Django_hw7

./: README.md  catalog.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: category.json  product.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_alter_category_description_and_more.py  0002_product_manufactured_at_alter_product_created_at_and_more.py  0003_alter_category_options.py  0004_product_views_counter.py  0005_blog.py  0006_alter_blog_date_creation.py  0007_alter_blog_date_creation.py  0008_version.py  0009_contactinfo_alter_version_options_and_more.py
catalog/templates/: base.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
